# postcod.es

./: .gitignore  AGENTS.md  LICENSE  README.md
data/: AGENTS.md
docs/: AGENTS.md  README.md  data_sources.md
pipeline/: AGENTS.md  pyproject.toml
pipeline/config/: frequency_weights.yaml  normalisation.yaml  open_names_type_families.yaml  source_schema.yaml
pipeline/sql/migrations/: 0001_phase1_foundation.sql  0002_phase1_resume_checkpoints.sql  0003_phase1_table_level_checkpoints.sql  0004_phase2_open_names_foundation.sql  0005_v3_cutover_foundation.sql  0006_v3_open_roads_stage_compat.sql  0007_v3_rename_os_open_lids.sql  0008_v3_lids_relation_stage.sql  0009_v3_rename_raw_os_open_lids_table.sql  0010_v3_open_lids_naming.sql  0011_v3_raw_run_rownum_indexes.sql  0012_v3_stage_tables_unlogged.sql  0013_v3_raw_tables_unlogged.sql  0014_v3_stage_join_indexes.sql  0015_v3_candidate_type_constraint.sql  0017_v3_open_names_postcode_stage.sql  0018_v3_postcode_place_admin_enrichment.sql  0019_v3_open_names_feature_expansion_spatial_fallback.sql  0019_v3_usrn_street_type_metadata.sql
pipeline/src/: __init__.py
pipeline/src/pipeline/: AGENTS.md  cli.py  config.py  manifest.py
pipeline/src/pipeline/contracts/: __init__.py  open_roads.py  voronoi.py
pipeline/src/pipeline/db/: __init__.py  connection.py  migrations.py
pipeline/src/pipeline/ingest/: __init__.py  workflows.py
pipeline/src/pipeline/util/: hashing.py  normalise.py
pipeline/src/util/: __init__.py  id_words.py  ids.py
pipeline/tests/: conftest.py  test_ids.py
scripts/: obtain_phase1_e2e_sources.sh  (+3 more)
(+99 files in other folders)
